@@ -6,6 +6,9 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Issue #88: Fix add_metaclass when the class has __slots__ containing
+  "__weakref__" or "__dict__".
+
 - Issue #89: Make six use absolute imports.
 
 - Issue #85: Always accept *updated* and *assigned* arguments for wraps().
